<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/userdetails"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="monospace" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/holo_purple"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/name"
                android:textColor="#005ce6"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="monospace" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.01"
                android:text="@string/colon" />

            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:padding="5dp"
                android:text=""
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="sans" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/username"
                android:textColor="#005ce6"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="monospace" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.01"
                android:text="@string/colon" />

            <TextView
                android:id="@+id/username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:padding="5dp"
                android:text=""
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="sans" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/company"
                android:textColor="#005ce6"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="monospace" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.01"
                android:text="@string/colon" />

            <TextView
                android:id="@+id/company"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:padding="5dp"
                android:text=""
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="sans" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/phoneno"
                android:textColor="#005ce6"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="monospace" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.01"
                android:text="@string/colon" />

            <TextView
                android:id="@+id/phoneno"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:padding="5dp"
                android:text=""
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="sans" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/email"
                android:textColor="#005ce6"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="monospace" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.01"
                android:text="@string/colon" />

            <TextView
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:padding="5dp"
                android:text=""
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="sans" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/website"
                android:textColor="#005ce6"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="monospace" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.01"
                android:text="@string/colon" />

            <TextView
                android:id="@+id/website"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:padding="5dp"
                android:text=""
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="sans" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/address"
                android:textColor="#005ce6"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="monospace" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.01"
                android:text="@string/colon" />

            <TextView
                android:id="@+id/address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:padding="5dp"
                android:text=""
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="sans" />

        </LinearLayout>


        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="fill_parent" />

    </TableLayout>

</ScrollView>
